--- a/package.json
+++ b/package.json
@@ -4,22 +4,14 @@
   "private": true,
   "description": "Личный проект «Кэт энерджи» от HTML Academy",
   "devDependencies": {
-    "@htmlacademy/editorconfig-cli": "1.x",
-    "autoprefixer": "^9.5.1",
-    "browser-sync": "^2.26.7",
-    "del": "^5.1.0",
+    "autoprefixer": "9.5.x",
+    "browser-sync": "2.26.x",
     "gulp": "4.0.x",
-    "gulp-csso": "^4.0.1",
-    "gulp-imagemin": "^7.1.0",
-    "gulp-less": "^4.0.1",
+    "gulp-less": "4.0.x",
     "gulp-plumber": "1.2.x",
-    "gulp-postcss": "8.0.x",
-    "gulp-posthtml": "^3.0.4",
-    "gulp-rename": "^2.0.0",
     "gulp-sourcemaps": "2.6.x",
-    "gulp-svgstore": "^7.0.1",
-    "gulp-webp": "^4.0.1",
-    "posthtml-include": "^1.4.3",
+    "gulp-postcss": "8.0.x",
+    "@htmlacademy/editorconfig-cli": "1.x",
     "stylelint": "10.1.x",
     "stylelint-config-htmlacademy": "0.1.x"
   },
@@ -47,8 +39,7 @@
     "node": "8.16"
   },
   "dependencies": {
-    "browserslist": "^4.12.0",
-    "caniuse-lite": "^1.0.30001059",
-    "package": "^1.0.1"
+    "browserslist": "^4.11.1",
+    "caniuse-lite": "^1.0.30001039"
   }
 }
